Fix build error and add bulk CSV import script
- Fix corrupted JSX in results page that caused build failure
- Create import-all-csv.ts script to process all CSV files from CSV data folder
- Automatically imports Education-services-*.csv files
- Updates benchmark calculations with real data
- Add npm run import-all-csv command

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint",
     "seed": "tsx scripts/seed.ts",
     "import-acecqa": "tsx scripts/import-acecqa-data.ts",
+    "import-all-csv": "tsx scripts/import-all-csv.ts",
     "setup-schema": "tsx scripts/setup-db.js"
   },
   "dependencies": {
