--- a/vercel.json
+++ b/vercel.json
@@ -4,5 +4,11 @@
   "buildCommand": "npm run build",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
-  "outputDirectory": ".next"
+  "outputDirectory": ".next",
+  "crons": [
+    {
+      "path": "/api/cron/sync-acecqa",
+      "schedule": "0 1 * * *"
+    }
+  ]
 }
